plugins {
    id 'idea'
    id 'java'
    id 'jacoco'
    id 'com.google.protobuf' version '0.8.8' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    version = '0.1'

    repositories {
        mavenCentral()
        maven {
            url 'https://yahoo.bintray.com/maven'
        }
        maven {
            url 'https://github.com/Project-Sustain/synopsis-sketch/raw/mvn-repository'
        }
        maven {
            url 'https://repo1.maven.org/maven2'
        }
        maven { // proto-buff plugin
            url "https://maven-central.storage-download.googleapis.com/repos/central/data/"
        }
        dependencies {
            implementation 'log4j:log4j:1.2.17'
            implementation 'org.yaml:snakeyaml:1.25'
            implementation 'commons-io:commons-io:2.6'

            testImplementation 'org.mockito:mockito-core:2.+'
            testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
        }
    }

    jacocoTestReport {
        reports {
            xml.enabled false
            csv.enabled false
            html.destination file("${buildDir}/reports/jacoco/")
        }
    }

    test {
        useJUnitPlatform()
        forkEvery = 1
        maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
        testLogging {
            events "passed", "skipped", "failed"
        }
    }
}
